; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_show-branch.c_append_one_rev.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_show-branch.c_append_one_rev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@ref_name_cnt = common dso_local global i32 0, align 4
@match_ref_pattern = common dso_local global i8* null, align 8
@match_ref_slash = common dso_local global i32 0, align 4
@append_matching_ref = common dso_local global i32 0, align 4
@MAX_REVS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"no matching refs with %s\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"bad sha1 reference %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @append_one_rev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @append_one_rev(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.object_id, align 4
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @get_oid(i8* %5, %struct.object_id* %3)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %1
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @append_ref(i8* %9, %struct.object_id* %3, i32 0)
  br label %48

11:                                               ; preds = %1
  %12 = load i8*, i8** %2, align 8
  %13 = call i64 @strchr(i8* %12, i8 signext 42)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %23, label %15

15:                                               ; preds = %11
  %16 = load i8*, i8** %2, align 8
  %17 = call i64 @strchr(i8* %16, i8 signext 63)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %23, label %19

19:                                               ; preds = %15
  %20 = load i8*, i8** %2, align 8
  %21 = call i64 @strchr(i8* %20, i8 signext 91)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %45

23:                                               ; preds = %19, %15, %11
  %24 = load i32, i32* @ref_name_cnt, align 4
  store i32 %24, i32* %4, align 4
  %25 = load i8*, i8** %2, align 8
  store i8* %25, i8** @match_ref_pattern, align 8
  %26 = load i8*, i8** %2, align 8
  %27 = call i32 @count_slashes(i8* %26)
  store i32 %27, i32* @match_ref_slash, align 4
  %28 = load i32, i32* @append_matching_ref, align 4
  %29 = call i32 @for_each_ref(i32 %28, i32* null)
  %30 = load i32, i32* %4, align 4
  %31 = load i32, i32* @ref_name_cnt, align 4
  %32 = icmp eq i32 %30, %31
  br i1 %32, label %33, label %41

33:                                               ; preds = %23
  %34 = load i32, i32* @ref_name_cnt, align 4
  %35 = load i32, i32* @MAX_REVS, align 4
  %36 = icmp slt i32 %34, %35
  br i1 %36, label %37, label %41

37:                                               ; preds = %33
  %38 = call i32 @_(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %39 = load i8*, i8** %2, align 8
  %40 = call i32 @error(i32 %38, i8* %39)
  br label %41

41:                                               ; preds = %37, %33, %23
  %42 = load i32, i32* %4, align 4
  %43 = load i32, i32* @ref_name_cnt, align 4
  %44 = call i32 @sort_ref_range(i32 %42, i32 %43)
  br label %48

45:                                               ; preds = %19
  %46 = load i8*, i8** %2, align 8
  %47 = call i32 @die(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i8* %46)
  br label %48

48:                                               ; preds = %45, %41, %8
  ret void
}

declare dso_local i32 @get_oid(i8*, %struct.object_id*) #1

declare dso_local i32 @append_ref(i8*, %struct.object_id*, i32) #1

declare dso_local i64 @strchr(i8*, i8 signext) #1

declare dso_local i32 @count_slashes(i8*) #1

declare dso_local i32 @for_each_ref(i32, i32*) #1

declare dso_local i32 @error(i32, i8*) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @sort_ref_range(i32, i32) #1

declare dso_local i32 @die(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
